# My-Progress

./: .env.example  .gitignore  Dockerfile  README.md  demo.rtf  pyproject.toml  requirements-ml.txt  requirements-sentinel.txt  requirements.txt  run.py
docs/: FINAL_REPORT.md  VALIDATION.md
frontend/: index.html
physics-for-policy-briefing/: .gitignore  README.md  references.bib
physics-for-policy-briefing/briefing/: briefing.tex
physics-for-policy-briefing/deliverables/: 01-stakeholder-map.md  02-evidence-synthesis.md  03-risk-uncertainty-register.md  04-policy-option-appraisal.md
physics-for-policy-briefing/verification/: VERIFICATION.md  exec_summary.txt  mcda_score.py  readability_check.py
tests/: test_api.py  test_cmod5n.py  test_estimator.py
windfield/: __init__.py  cli.py  cmod5n.py  config.py  estimator.py  geo.py  sar_source.py  schemas.py  validation.py  visualize.py  wind_direction.py
windfield/api/: app.py
windfield/ml/: __init__.py  resnet_direction.py  train.py
